internet-gateway.tf
# Define the internet gateway
resource "aws_internet_gateway" "internet-gateway" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags {
    Name = "INTERNET GATEWAY"
  }
}
